tests/valid/ConstrainedList_Invalid_22.whiley
import println from whiley.lang.System

string f():
    return ""

void ::main(System.Console sys):
    sys.out.println(f())
