tests/invalid/Assign_Invalid_2.whiley
import * from whiley.lang.*

bool f(int x):
     return x

